1)  sign_btn a: fix vert. alignment 2) captcha small change
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@16257 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -1420,7 +1420,7 @@ TD.toolbar {
   /*border-color: &[PrimaryColor_4];*/
 }
 
-.sign_btn a { padding: 5px; font-size: 12px; color: &[PrimaryColor_4_text];; font-weight: bold; display: block; white-space: nowrap; }
+.sign_btn a { line-height: 16px; /* height of .itxt */ padding: 5px; font-size: 12px; color: &[PrimaryColor_4_text];; font-weight: bold; display: block; white-space: nowrap; }
 .dashboard_btn a { padding: 5px; font-size: 12px; color: &[PrimaryColor_4_text];; font-weight: bold; display: block; white-space: nowrap; }
 .current a { color: &[AccentedLetter];; }
 
@@ -1677,7 +1677,7 @@ table.printFB {
 }
 
 /* captcha */
-.captcha td { padding-left: 25px; }
+.captcha td { /*padding-left: 25px; text-align: center; */}
 .captcha table td { width: 51; height: 50; } /* puzzle td */
 .captcha .a { background-position: 0% 0%; padding: 0; margin: 0;}
 .captcha .b { background-position: 25% 0%; padding: 0; margin: 0;}
